

                              Kiji Schema Release Notes

Version 1.1.0
  * SCHEMA-405. Adds KijiRowKeyComponents, a way to specify the components
      of a Kiji row key independent of a RowKeyFormat. May be converted into
      an EntityId, given a KijiTable or EntityIdFactory.
  * SCHEMA-388. KijiRowScanner handles HBase scanner timeouts and reopens
      the scanner as needed. Introduces two scanner options:
       - KijiScannerOptions.setReopenScannerOnTimeout() is true by default,
	 which means HBase scanners are automatically reopened on timeouts
	 instead of throwing a ScannerTimeoutException;
       - KijiScannerOptions.setRowCaching() configures the number of rows
	 fetched for each RPC to the region server. By defaults, this has
	 the of value the configuration property hbase.client.scanner.caching,
	 which is 1 unless overridden in hbase-site.xml.
  * SCHEMA-380. Version pagers may now be created on fully-qualified columns
      belonging to paging-enabled map-type families.
  * SCHEMA-355. KijiRowKeySplitter is parametrized by row key resolution.
  * SCHEMA-346. AtomicKijiPutter is no longer restricted to writing within a
      single locality group.  Calls to commit() no longer accept a locality group name.
  * SCHEMA-354. Change use of filters to comply with HBase 0.92 and 0.94 semantics.
    This provides experimental support for HBase 0.94, though this is not the
    default.  KijiSchema uses HBase filters to convert KijiDataRequests into the
    smallest possible HBase request. Where columns have a different maxVersions,
    columns with maxVersions not equal to 1 may communicate more values across
    the wire than are requested; the actual amount of data transferred may be as
    many as the largest maxVersions observed in the data request.  Previously
    (<= 0.92) all per-column maxVersions could be respected on the wire in
    addition to within KijiRowData.
  * SCHEMA-283. Add more table and and locality group properties to